--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "portsite",
+  "name": "mywebsite",
   "version": "0.1.0",
+  "homepage": "https://gitname.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^3.4.0",
+    "react-icons": "^4.7.1",
+    "react-parallax-tilt": "^1.7.75",
+    "react-pdf": "^6.2.0",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.6.0",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
